Change to many nodes deployment.

--- a/.env
+++ b/.env
@@ -7,15 +7,25 @@ GATEWAY_COCKROACH_NODE_PORT=26357
 GATEWAY_COCKROACH_SQL_PORT=26257
 GATEWAY_COCKROACH_HTTP_PORT=8080
 GATEWAY_MILVUS_PORT=19530
+GATEWAY_ETCD_CLIENT_PORT=2378
+GATEWAY_ETCD_PEER_PORT=2380
+GATEWAY_MINIO_NODE_PORT=9000
+GATEWAY_MINIO_CONSOLE_PORT=9001
 
 GATEWAY_REDIS_PASSWORD=password
-
-GATEWAY_MILVUS_USER=user
-GATEWAY_MILVUS_PASSWORD=password
 
 GATEWAY_COCKROACH_USER=user
 GATEWAY_COCKROACH_PASSWORD=
 GATEWAY_COCKROACH_DATABASE=database
+
+GATEWAY_MILVUS_USER=user
+GATEWAY_MILVUS_PASSWORD=password
+
+GATEWAY_MINIO_ROOT_USER=user
+GATEWAY_MINIO_ROOT_PASSWORD=password
+
+NGINX_ONE_HOST=nginx-one
+NGINX_TWO_HOST=nginx-two
 
 FRONTEND_HOST=frontend
 FRONTEND_PORT=${GATEWAY_FRONTEND_PORT}
@@ -26,12 +36,65 @@ BACKEND_PORT=${GATEWAY_BACKEND_PORT}
 REDIS_ONE_HOST=redis-one
 REDIS_ONE_PORT=${GATEWAY_REDIS_PORT}
 REDIS_ONE_PASSWORD=${GATEWAY_REDIS_PASSWORD}
+REDIS_TWO_HOST=redis-two
+REDIS_TWO_PORT=${GATEWAY_REDIS_PORT}
+REDIS_TWO_PASSWORD=${GATEWAY_REDIS_PASSWORD}
+REDIS_THREE_HOST=redis-three
+REDIS_THREE_PORT=${GATEWAY_REDIS_PORT}
+REDIS_THREE_PASSWORD=${GATEWAY_REDIS_PASSWORD}
 
 MILVUS_ONE_HOST=milvus-one
 MILVUS_ONE_PORT=${GATEWAY_MILVUS_PORT}
+MILVUS_TWO_HOST=milvus-two
+MILVUS_TWO_PORT=${GATEWAY_MILVUS_PORT}
+MILVUS_THREE_HOST=milvus-three
+MILVUS_THREE_PORT=${GATEWAY_MILVUS_PORT}
+
+ETCD_ONE_HOST=etcd-one
+ETCD_ONE_NAME=one
+ETCD_ONE_CLIENT_PORT=${GATEWAY_ETCD_CLIENT_PORT}
+ETCD_ONE_PEER_PORT=${GATEWAY_ETCD_PEER_PORT}
+ETCD_TWO_HOST=etcd-two
+ETCD_TWO_NAME=two
+ETCD_TWO_CLIENT_PORT=${GATEWAY_ETCD_CLIENT_PORT}
+ETCD_TWO_PEER_PORT=${GATEWAY_ETCD_PEER_PORT}
+ETCD_THREE_HOST=etcd-three
+ETCD_THREE_NAME=three
+ETCD_THREE_CLIENT_PORT=${GATEWAY_ETCD_CLIENT_PORT}
+ETCD_THREE_PEER_PORT=${GATEWAY_ETCD_PEER_PORT}
+
+GATEWAY_ETCD_INITIAL_CLUSTER=${ETCD_ONE_NAME}=http://${ETCD_ONE_HOST}:${ETCD_ONE_PEER_PORT},${ETCD_TWO_NAME}=http://${ETCD_TWO_HOST}:${ETCD_TWO_PEER_PORT},${ETCD_THREE_NAME}=http://${ETCD_THREE_HOST}:${ETCD_THREE_PEER_PORT}
+GATEWAY_ETCD_INITIAL_CLUSTER_STATE=new
+GATEWAY_ETCD_INITIAL_CLUSTER_TOKEN=etcd-cluster-one
+
+MINIO_ONE_HOST=minio-one
+MINIO_ONE_NODE_PORT=${GATEWAY_MINIO_NODE_PORT}
+MINIO_ONE_CONSOLE_PORT=${GATEWAY_MINIO_CONSOLE_PORT}
+MINIO_ONE_ROOT_USER=${GATEWAY_MINIO_ROOT_USER}
+MINIO_ONE_ROOT_PASSWORD=${GATEWAY_MINIO_ROOT_PASSWORD}
+
+MINIO_TWO_HOST=minio-two
+MINIO_TWO_NODE_PORT=${GATEWAY_MINIO_NODE_PORT}
+MINIO_TWO_CONSOLE_PORT=${GATEWAY_MINIO_CONSOLE_PORT}
+MINIO_TWO_ROOT_USER=${GATEWAY_MINIO_ROOT_USER}
+MINIO_TWO_ROOT_PASSWORD=${GATEWAY_MINIO_ROOT_PASSWORD}
+
+MINIO_THREE_HOST=minio-three
+MINIO_THREE_NODE_PORT=${GATEWAY_MINIO_NODE_PORT}
+MINIO_THREE_CONSOLE_PORT=${GATEWAY_MINIO_CONSOLE_PORT}
+MINIO_THREE_ROOT_USER=${GATEWAY_MINIO_ROOT_USER}
+MINIO_THREE_ROOT_PASSWORD=${GATEWAY_MINIO_ROOT_PASSWORD}
 
 COCKROACH_ONE_HOST=cockroach-one
 COCKROACH_ONE_NODE_PORT=${GATEWAY_COCKROACH_NODE_PORT}
 COCKROACH_ONE_SQL_PORT=${GATEWAY_COCKROACH_SQL_PORT}
 COCKROACH_ONE_HTTP_PORT=${GATEWAY_COCKROACH_HTTP_PORT}
+COCKROACH_TWO_HOST=cockroach-two
+COCKROACH_TWO_NODE_PORT=${GATEWAY_COCKROACH_NODE_PORT}
+COCKROACH_TWO_SQL_PORT=${GATEWAY_COCKROACH_SQL_PORT}
+COCKROACH_TWO_HTTP_PORT=${GATEWAY_COCKROACH_HTTP_PORT}
+COCKROACH_THREE_HOST=cockroach-three
+COCKROACH_THREE_NODE_PORT=${GATEWAY_COCKROACH_NODE_PORT}
+COCKROACH_THREE_SQL_PORT=${GATEWAY_COCKROACH_SQL_PORT}
+COCKROACH_THREE_HTTP_PORT=${GATEWAY_COCKROACH_HTTP_PORT}
 
