--- a/one/nginx/one.template.nginx.conf
+++ b/one/nginx/one.template.nginx.conf
@@ -15,50 +15,46 @@ stream {
 
     upstream redis {
         server ${REDIS_ONE_HOST}:${REDIS_ONE_PORT};
-        server ${REDIS_TWO_HOST}:${REDIS_TWO_PORT};
-        server ${REDIS_THREE_HOST}:${REDIS_THREE_PORT};
+    }
+
+    upstream redis_insight {
+        server ${REDIS_INSIGHT_ONE_HOST}:${REDIS_INSIGHT_ONE_PORT};
     }
 
     upstream cockroachdb_node {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_NODE_PORT};
-        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_NODE_PORT};
-        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_NODE_PORT};
     }
 
     upstream cockroachdb_sql {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_SQL_PORT};
-        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_SQL_PORT};
-        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_SQL_PORT};
     }
 
     upstream cockroachdb_http {
         server ${COCKROACH_ONE_HOST}:${COCKROACH_ONE_HTTP_PORT};
-        server ${COCKROACH_TWO_HOST}:${COCKROACH_TWO_HTTP_PORT};
-        server ${COCKROACH_THREE_HOST}:${COCKROACH_THREE_HTTP_PORT};
     }
 
     upstream milvus {
-        server ${MILVUS_ONE_HOST}:${MILVUS_ONE_PORT};
-        server ${MILVUS_TWO_HOST}:${MILVUS_TWO_PORT};
-        server ${MILVUS_THREE_HOST}:${MILVUS_THREE_PORT};
+        server ${NGINX_TWO_HOST}:${MILVUS_STANDALONE_PORT};
     }
 
     upstream etcd_client {
         server ${NGINX_TWO_HOST}:${ETCD_ONE_CLIENT_PORT};
-        server ${NGINX_TWO_HOST}:${ETCD_TWO_CLIENT_PORT};
-        server ${NGINX_TWO_HOST}:${ETCD_THREE_CLIENT_PORT};
     }
 
     upstream minio_node {
         server ${NGINX_TWO_HOST}:${MINIO_ONE_NODE_PORT};
-        server ${NGINX_TWO_HOST}:${MINIO_TWO_NODE_PORT};
-        server ${NGINX_TWO_HOST}:${MINIO_THREE_NODE_PORT};
     }
 
     upstream minio_console {
         server ${NGINX_TWO_HOST}:${MINIO_ONE_CONSOLE_PORT};
-        server ${NGINX_TWO_HOST}:${MINIO_TWO_CONSOLE_PORT};
-        server ${NGINX_TWO_HOST}:${MINIO_THREE_CONSOLE_PORT};
+    }
+
+    upstream kafka {
+        server ${NGINX_TWO_HOST}:${KAFKA_ONE_PORT};
+    }
+
+    upstream kafka_ui {
+        server ${NGINX_TWO_HOST}:${KAFKA_UI_ONE_PORT};
     }
 
 #     server {
@@ -74,6 +70,11 @@ stream {
     server {
         listen ${GATEWAY_REDIS_PORT};
         proxy_pass redis;
+    }
+
+    server {
+        listen ${GATEWAY_REDIS_INSIGHT_PORT};
+        proxy_pass redis_insight;
     }
 
     server {
@@ -109,6 +110,16 @@ stream {
     server {
         listen ${GATEWAY_MINIO_CONSOLE_PORT};
         proxy_pass minio_console;
+    }
+
+    server {
+        listen ${GATEWAY_KAFKA_PORT};
+        proxy_pass kafka;
+    }
+
+    server {
+        listen ${GATEWAY_KAFKA_UI_PORT};
+        proxy_pass kafka_ui;
     }
 
 }
