--- a/many/nginx/two.template.nginx.conf
+++ b/many/nginx/two.template.nginx.conf
@@ -24,6 +24,16 @@ stream {
         server ${MINIO_THREE_HOST}:${MINIO_THREE_CONSOLE_PORT};
     }
 
+    upstream kafka {
+        server ${KAFKA_ONE_HOST}:${KAFKA_ONE_PORT};
+        server ${KAFKA_TWO_HOST}:${KAFKA_TWO_PORT};
+        server ${KAFKA_THREE_HOST}:${KAFKA_THREE_PORT};
+    }
+
+    upstream kafka_ui {
+        server ${KAFKA_UI_ONE_HOST}:${KAFKA_UI_ONE_PORT};
+    }
+
     server {
         listen ${GATEWAY_ETCD_CLIENT_PORT};
         proxy_pass etcd_client;
@@ -37,6 +47,16 @@ stream {
     server {
         listen ${GATEWAY_MINIO_CONSOLE_PORT};
         proxy_pass minio_console;
+    }
+
+    server {
+        listen ${GATEWAY_KAFKA_PORT};
+        proxy_pass kafka;
+    }
+
+    server {
+        listen ${GATEWAY_KAFKA_UI_PORT};
+        proxy_pass kafka_ui;
     }
 
 }
